<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuSortPopular"
                android:title="@string/sort_popular"
                />
            <item
                android:id="@+id/menuSortTopRated"
                android:title="@string/sort_top_rated"
                />
            <item
                android:id="@+id/menuSortFavourite"
                android:title="@string/sort_favourite"
                />
            <item
                android:id="@+id/menuDb"
                android:title="@string/open_db"
                />
        </menu>
    </item>

</menu>